# Egui-Rust-Shader

./: Cargo.toml  Trunk.toml  index.html
src/: main.rs
wasm32-unknown-unknown/: index.html
