[package]
name = "my_first_rust_project"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", features = ["webgl"] }
egui = "0.22"
js-sys = "0.3"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
three-d = "0.18.2"
pollster = "0.4.0"
wasm-bindgen-futures = "0.4.54"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "winnt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3.81"
